# OmniParser-RAG

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
src/: main.py  server.py
src/agents/: __init__.py  graph_retriever.py  llm_client.py
src/config/: settings.py
src/database/: __init__.py  code_graph.py  vector_client.py
src/parser/: __init__.py  ingestor.py
src/static/: index.html
src/utils/: __init__.py
tests/: test_env.py
